adjusting script